<resources>
    <string name="app_name">alphametrica</string>
    <string name="textView_login">로그인</string>
    <string name="subscribe_button_text">가입하기</string>
    <string name="login_email_sample">sabahat@gmail.com</string>
    <string name="login_access">로그인</string>
    <string name="login_new_account_subscribe">계정이 없으신가요? 가입하기</string>
    <string name="login_forgot_password">비밀번호 찾기</string>
    <string name="login_sample_password">**********</string>
    <string name="login_text">로그인</string>
    <string name="login_text_email">Email</string>
    <string name="login_text_password">비밀번호</string>
    <string name="subs_main_text">회원가입</string>
    <string name="subs_name">이름</string>
    <string name="subs_hint_name">이채민</string>
    <string name="subs_phone">휴대폰 번호</string>
    <string name="subs_phone_hint">+82 111 1111111</string>
    <string name="subs_birthday">생년월일</string>
    <string name="subs_birth_hint">mm-dd-yyyy</string>
    <string name="subs_email">Email</string>
    <string name="subs_email_hint">john.doe@alphametics.com</string>
    <string name="subs_confirm_password">비밀번호 확인</string>
    <string name="subs_password_hint">* * * * * * * *</string>
    <string name="subs_checkBox1">최소 8자 이상</string>
    <string name="subs_checkBox2">최소 하나의 숫자</string>
    <string name="subs_checkBox3">최소 하나의 대문자</string>
    <string name="subs_checkBox4">최소 하나의 특수문자</string>
    <string name="subs_checkBox5">이용약관에 동의합니다</string>
    <string name="subs_action">가입하기</string>
    <string name="subs_login">이미 계정이 있으신가요? 로그인</string>
    <string name="home_welcome_message">Welcome!</string>
</resources>