<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="1075dp">

        <ImageView
            android:id="@+id/subs_alphametrica"
            android:layout_width="171.13dp"
            android:layout_height="28dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/alphametrica" />

        <TextView
            android:id="@+id/subscribe_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/subs_main_text"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subs_alphametrica" />

        <TextView
            android:id="@+id/subs_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="214dp"
            android:text="@string/subs_name"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginEnd="41.5dp"
            android:layout_marginRight="41.5dp"
            android:ems="10"
            android:hint="@string/subs_hint_name"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subs_name" />

        <TextView
            android:id="@+id/subs_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/subs_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginEnd="41.5dp"
            android:layout_marginRight="41.5dp"
            android:ems="10"
            android:hint="@string/subs_phone_hint"
            android:inputType="phone"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subs_phone" />

        <TextView
            android:id="@+id/subs_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/subs_birthday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginEnd="41.5dp"
            android:layout_marginRight="41.5dp"
            android:ems="10"
            android:hint="@string/subs_birth_hint"
            android:inputType="date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subs_birthday" />

        <TextView
            android:id="@+id/subs_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/subs_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginEnd="41.5dp"
            android:layout_marginRight="41.5dp"
            android:ems="10"
            android:hint="@string/subs_email_hint"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subs_email" />

        <TextView
            android:id="@+id/subs_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="24dp"
            android:text="비밀번호"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginEnd="41.5dp"
            android:layout_marginRight="41.5dp"
            android:ems="10"
            android:hint="@string/subs_password_hint"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subs_password" />

        <TextView
            android:id="@+id/subs_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/subs_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginEnd="41.5dp"
            android:layout_marginRight="41.5dp"
            android:ems="10"
            android:hint="@string/subs_password_hint"
            android:inputType="textPassword"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subs_confirm_password" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:text="@string/subs_checkBox1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="15dp"
            android:text="@string/subs_checkBox2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="36dp"
            android:text="@string/subs_checkBox3"
            app:layout_constraintStart_toEndOf="@+id/checkBox1"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"

            android:layout_marginTop="12dp"
            android:text="@string/subs_checkBox4"
            app:layout_constraintStart_toEndOf="@+id/checkBox2"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

        <CheckBox
            android:id="@+id/subs_checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/subs_checkBox5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

        <Button
            android:id="@+id/button"
            android:layout_width="287dp"
            android:layout_height="53dp"
            android:layout_marginTop="22dp"
            android:backgroundTint="#3B286D"
            android:text="@string/subs_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subs_checkBox5" />

        <TextView
            android:id="@+id/subs_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/subs_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
