<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_alphametrica"
        android:layout_width="171.13dp"
        android:layout_height="28dp"
        android:layout_marginTop="79dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alphametrica" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginTop="38dp"
        android:fontFamily="sans-serif"
        android:text="@string/login_text"
        android:textColor="#0A0A0A"
        android:textFontWeight="400"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_alphametrica" />

    <TextView
        android:id="@+id/login_text_email"
        android:layout_width="35dp"
        android:layout_height="17dp"
        android:layout_marginStart="57.13dp"
        android:layout_marginLeft="57.13dp"
        android:layout_marginTop="260.5dp"
        android:text="@string/login_text_email"
        android:textColor="#B7B7B7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54.87dp"
        android:layout_marginLeft="54.87dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_email"
        app:srcCompat="@drawable/login_email" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="54.87dp"
        android:hint="@string/login_email_sample"
        android:inputType="textEmailAddress"
        android:paddingStart="44dp"
        android:paddingLeft="44dp"
        android:paddingBottom="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_email" />

    <TextView
        android:id="@+id/login_text_password"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="359.5dp"
        android:text="@string/login_text_password"
        android:textColor="#B7B7B7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55.87dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_password"
        app:srcCompat="@drawable/login_lock" />

    <EditText
        android:id="@+id/login_password_result"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="2dp"
        android:hint="@string/login_sample_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="44dp"
        android:paddingLeft="44dp"
        android:paddingBottom="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_password" />

    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272.13dp"
        android:layout_marginLeft="272.13dp"
        android:layout_marginTop="33dp"
        android:text="@string/login_forgot_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_result" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="287dp"
        android:layout_height="53dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="@color/button_login"
        android:text="@string/login_access"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_result" />

    <TextView
        android:id="@+id/login_new_account_subscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_new_account_subscribe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.155" />

</androidx.constraintlayout.widget.ConstraintLayout>